# XoXo

./: .env  Cargo.toml  README.md
cnfg/: cbfg.xml
src/: lib.rs
src/db/: common.rs  mod.rs
src/game_logic/: board.rs  game_session.rs  mod.rs  player.rs  simple_game_board.rs
src/utils/: config.rs
src/web_server/: comments_wrapper.rs  game_sessions_handler.rs  hello_world.rs  mod.rs  players_handler.rs
src/web_utils/: iron_router.rs  mod.rs  web_logger.rs
static-pages/: comments.json  index.html
templates/: header.tpl
user-stories/: playing
