[package]
name = "xoxo_lib"
version = "0.1.0"
authors = ["manicqin <8845802>"]

[dependencies]
rustc-serialize = "0.3"
rand = "0.3"
RustyXML = "*"
time = "*"
rust-crypto="*"
staticfile = "*"
persistent = "*"
#bodyparser = "*"
router = "*"
plugin = "*"
#params = "*"
mount = "*"
postgres = "0.11"
diesel = "0.5.0"
diesel_codegen = { version = "0.5.0", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"

[dependencies.iron]
version = "*"

#[dependencies.session]
#git = "https://github.com/iron/session.git"

#[dependencies.cookie]
#git = "https://github.com/iron/cookie.git"
